--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-heroku config:set DATABASE_URI='mongodb+srv://aaa153599@mrhumble.dd71i.mongodb.net/NoteTakingAppDB'
+heroku config:set DATABASE_URI=mongodb+srv://Abdulboriy:zerotomastery@cluster0.mpywc.mongodb.net/NoteTakingAppDB
